# glite-legacy

org.glite.deployment.jpis/project/: build.number  glite-jp.sdf.xml.template  lxscript-rpm.xsl  lxscript-tgz.xsl  properties.xml  quattor-template.xsl  version.properties
org.glite.deployment.jpps/: build.xml
org.glite.deployment.jpps/project/: glite-jpps.sdf.xml  glite-jpps.sdf.xml.template  glite-jpps.spec  lxscript-rpm.xsl  lxscript-tgz.xsl  properties.xml  quattor-template.xsl  spec.xsl
org.glite.deployment.lb/: CHANGELOG  build.xml
org.glite.deployment.lb/config/: glite-lb-bkserverd  glite-lb-config  glite-lb-config.xml  glite-lb-install  glite-lb.cfg.xml
org.glite.deployment.lb/project/: build.number  glite-lb-server.sdf.xml.template  glite-lb.sdf.xml.template  glite-lb.spec  lxscript-rpm.xsl  lxscript-tgz.xsl  properties.xml  quattor-template.xsl  version.properties
org.glite.lb-utils/: build.xml
org.glite.lb-utils.context/: build.xml
org.glite.lb-utils.context/project/: configure.properties.xml  properties.xml
org.glite.lb-utils.db/: Makefile  build.xml
org.glite.lb-utils.db/examples/: db_test.c
org.glite.lb-utils.db/interface/: db.h
org.glite.lb-utils.db/project/: build.properties  configure.properties.xml  properties.xml
org.glite.lb-utils.db/src/: db.c
org.glite.lb-utils.jobid/: Makefile  build.xml
org.glite.lb-utils.jobid/interface/: JobId.h  JobIdExceptions.h
org.glite.lb-utils.jobid/project/: configure.properties.xml  properties.xml
org.glite.lb-utils.jobid/src/: cjobid.c  strmd5.c  strmd5.h
org.glite.lb-utils.server-bones/: build.xml
org.glite.lb-utils.server-bones/project/: configure.properties.xml  properties.xml
org.glite.lb-utils.trio/: build.xml
org.glite.lb-utils.trio/project/: build.properties  configure.properties.xml  properties.xml
org.glite.lb-utils/project/: dependencies.properties  glite.lb-utils.csf.xml  properties.xml  taskdefs.xml
org.glite.lb.client-interface/: IMPORTANT-README  Makefile  build.xml
org.glite.lb.client-interface/doc/: C.dox  CPP.dox
org.glite.lb.client-interface/interface/: CountRef.h  Event.h.T  Job.h  JobStatus.h.T  LoggingExceptions.h  Notification.h  ServerConnection.h  consumer.h  consumer_fake.h  context-generic.h  context.h  dump.h  events.h.T  jobstat.h.T  load.h  notification.h  notifid.h  padstruct.h  producer-generic.h  producer.h.T  producer_fake.h  purge.h  statistics.h
org.glite.lb.client-interface/project/: ChangeLog  build.number  configure-options.xml  configure.properties.xml  properties.xml  version.properties
org.glite.lb.client-interface/src/: StatusAttrNames.pl
org.glite.lb.glite-LB/: Makefile
org.glite.lb.glite-LB/project/: ChangeLog  version.properties
org.glite.lb.proxy/: .Makefile.swp  Makefile  build.xml
org.glite.lb.proxy/config/: startup
org.glite.lb.proxy/doc/: README  README.deploy
org.glite.lb.proxy/examples/: test.sh  test1.sh  test2.sh  test3.sh
org.glite.lb.proxy/project/: ChangeLog  build.number  configure.properties.xml  properties.xml  version.properties
org.glite.lb.proxy/src/: fake_write2rgma.c  lbproxy.c  perftest_proxy.sh
org.glite.lb.server-bones/: Makefile  build.xml
org.glite.lb.server-bones/examples/: cnt_example.c  srv_example.c
org.glite.lb.server-bones/interface/: srvbones.h
org.glite.lb.server-bones/project/: ChangeLog  build.number  configure.properties.xml  glite-lb-server-bones.spec  properties.xml  version.properties
org.glite.lb.server-bones/src/: srvbones.c
org.glite.lbjp-utils.jobid/: Makefile
org.glite.lbjp-utils.jobid/interface/: Exception.h  cjobid.h
org.glite.lbjp-utils.server-bones/src/: srvbones.c
org.glite.myproxy-config/: Makefile  myproxy-config.spec  myproxy-initd
org.glite.px.glite-PX/: Makefile
org.glite.px.glite-PX/project/: ChangeLog  version.properties
org.glite.px.myproxy-config/: Makefile  configure  myproxy-initd
org.glite.px.myproxy-config/project/: ChangeLog  myproxy-config.spec  package.summary  version.properties
org.glite.security.gsoap-plugin/: Makefile  build.xml
org.glite.security.gsoap-plugin/examples/: calc.h.S  (+3 more)
org.glite.security.gss/: Makefile
org.glite.security.proxyrenewal/: Makefile  build.xml
org.glite.wms-utils.exception/: Makefile.am  bootstrap  build.xml  configure.ac
org.glite.wms-utils.exception/interface/: Makefile.am
org.glite.wms-utils.exception/interface/glite/wmsutils/exception/: Exception.h  Exceptions.h  exception_codes.h  result_codes.h
org.glite.wms-utils.exception/project/: build.number  build.properties  configure.properties.xml  glite-wms-utils-exception_sl5_x86_64.spec  properties.xml  version.properties
org.glite.wms-utils.exception/project/debfiles/: control  copyright  glite-wms-utils-exception-dev.install  glite-wms-utils-exception.install  rules
org.glite.wms-utils.exception/src/: Exception.cpp  Exceptions.cpp  Makefile.am  jobman-exception.pc.in  utils.cpp  utils.h
org.glite.wms-utils.exception/test/: Makefile.am  exception_cu_main.cpp  exception_cu_suite.cpp  exception_cu_suite.h
org.glite.wms-utils.jobid/: Makefile.am  build.xml  configure.ac
org.glite.wms-utils.jobid/examples/: Makefile.am  testjobid.c
org.glite.wms-utils.jobid/interface/: Makefile.am
org.glite.wms-utils.jobid/interface/glite/wmsutils/jobid/: JobId.h  JobIdExceptions.h  cjobid.h  manipulation.h
org.glite.wms-utils.jobid/project/: build.number  build.properties  configure-options.xml  configure.properties.xml  properties.xml  version.properties
org.glite.wms-utils.jobid/src/: Makefile.am
org.glite.wms-utils.jobid/src/jobid/: JobId.cpp  JobId.h  JobIdExceptions.cpp  JobIdExceptions.h  Makefile.am  cjobid.c  cjobid.h  jobid-c.h  jobid.c  jobid.h  jobid_namespace.h  manipulation.cpp  manipulation.h  strmd5.c  strmd5.h
org.glite.wms-utils.jobid/test/: Makefile.am  jobid_cu_main.cpp  jobid_cu_suite.cpp  jobid_cu_suite.h  manipulation_cu_main.cpp  manipulation_cu_suite.cpp  manipulation_cu_suite.h  testjobid.c
org.glite.yaim.lb/: Makefile  glite-yaim-lb.spec
org.glite.yaim.myproxy/: Changelog  Makefile  glite-yaim-myproxy.spec
(+84 files in other folders)
