#
#       Copyright (c) 2004 on behalf of the EU EGEE Project:
#       The European Organization for Nuclear Research (CERN),
#       Istituto Nazionale di Fisica Nucleare (INFN), Italy
#       Datamat Spa, Italy
#       Centre National de la Recherche Scientifique (CNRS), France
#       CS Systeme d'Information (CSSI), France
#       Royal Institute of Technology, Center for Parallel Computers (KTH-PDC), Sweden
#       Universiteit van Amsterdam (UvA), Netherlands
#       University of Helsinki (UH.HIP), Finland
#       University of Bergen (UiB), Norway
#       Council for the Central Laboratory of the Research Councils (CCLRC), United Kingdom
#
#       Common configure.ac file for the GLite WMS Common module
#
#       Authors: Alberto Di Meglio <alberto.di.meglio@cern.ch>
#       Version info: $Id$
#       Release: $Name$
#
#       Revision history:
#       $Log$
#       Revision 1.13.2.2  2006/06/26 21:04:14  eronchie
#       Increased version
#
#       Revision 1.13.2.1  2006/04/19 14:38:44  eronchie
#       Increased version
#
#       Revision 1.13  2006/03/20 15:29:52  eronchie
#       Increased version
#
#       Revision 1.12  2005/10/15 07:54:17  eronchie
#       Increased version
#
#       Revision 1.11  2005/09/20 10:20:52  eronchie
#       Started merged with 1.4
#
#       Revision 1.10  2004/12/10 07:31:35  eronchie
#       Increased version
#
#       Revision 1.9  2004/11/16 15:31:13  eronchie
#       Increased version
#
#       Revision 1.8  2004/09/22 00:25:17  glbuild
#       Fixed missing parenthesis
#
#       Revision 1.7  2004/09/21 19:21:57  glbuild
#       modified module.version
#
#       Revision 1.6  2004/08/17 10:41:47  eronchie
#       Added optimize option
#
#       Revision 1.5  2004/07/23 08:02:09  eronchie
#       Updated configure.ac
#
#       Revision 1.4  2004/07/21 18:49:26  eronchie
#       Added AC_GLITE
#
#       Revision 1.3  2004/07/21 18:47:49  eronchie
#       Removed obsolete things
#
#       Revision 1.2  2004/07/21 18:44:22  eronchie
#       Updated header file
#
#       Revision 1.1.1.1  2004/07/21 18:16:57  eronchie
#       Moved out exception from org.glite.wms.common/src/utilitiesY
#
#
#
                                                                                                                                                             
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT([GLite WMS Utils Exception], [3.1.3])
AC_CONFIG_AUX_DIR([./project])
AM_INIT_AUTOMAKE([1.6.3 subdir-objects])
AC_CONFIG_SRCDIR([src/Exception.cpp])

# Notices.
AC_COPYRIGHT([Copyright (c) 2004 The EU EGEE Project
See LICENCE file for details
])
AC_REVISION([$Revision$])

#Environment.
WORKDIR=`pwd`
AC_SUBST(WORKDIR)

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_CC_C_O
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h mntent.h sys/vfs.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_rdev])
AC_TYPE_UID_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_HEADER_STDC
AC_FUNC_ERROR_AT_LINE
AC_FUNC_GETMNTENT
AC_FUNC_MEMCMP
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([bzero endpwent ftruncate getmntent memset mkdir pow strerror strtol])

AC_GLITE

AC_OPTIMIZE

# Configuration items
AC_PREFIX_DEFAULT([/opt/glite])
AM_CONFIG_HEADER([src/autogen/config.h])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_CONFIG_FILES([interface/Makefile])

AC_OUTPUT

