## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

exceptiondir = $(includedir)
nobase_exception_HEADERS = \
	glite/wmsutils/exception/exception_codes.h \
	glite/wmsutils/exception/Exception.h

MAINTAINERCLEANFILES = Makefile.in
