## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

lib_LTLIBRARIES    = libglite_wmsutils_exception.la

libglite_wmsutils_exception_la_SOURCES = \
	Exception.cpp

AM_CPPFLAGS = -I$(top_srcdir)/interface \
	-I$(top_srcdir)/src 

MAINTAINERCLEANFILES = Makefile.in *.*~
