## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

jobiddir = $(includedir)
nobase_jobid_HEADERS = \
	glite/wmsutils/jobid/cjobid.h \
	glite/wmsutils/jobid/manipulation.h \
	glite/wmsutils/jobid/JobIdExceptions.h \
	glite/wmsutils/jobid/JobId.h

MAINTAINERCLEANFILES = Makefile.in
