## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

## Subdirectories list
SUBDIRS = jobid

jobid_includedir = $(includedir)/glite/workload/jobid
jobid_include_HEADERS = jobid_namespace.h

MAINTAINERCLEANFILES = Makefile.in 
